--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<a href="style.css"></a>
 	<meta charset="utf-8">
 	<title>Coursera solution file</title>
 </head>
