--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<a href="style.css"></a>
+	<link rel="stylesheet" href="style.css">
 	<meta charset="utf-8">
 	<title>Coursera solution file</title>
 </head>
