--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 
 <html>
 <head>
-<title>Assignment</title>
+<title>My Coursera Assingment</title>
 <meta name="viewport" content="width=device-width.initial-scale=1">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1> Our Menu</h1>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-12">
-			<section>
-				
-	<h2 id="pizza">Pizza</h2>
+  <section>			
+	<h2 id="french">French fries</h2>
 	<p>
-	Pizza is a savory dish of Italian origin, consisting of a usually round, flattened base of leavened wheat-based dough topped with tomatoes, cheese, and various other ingredients baked at a high temperature, traditionally in a wood-fired oven.</p></section></div>
+	French fries, or simply fries; chips, finger chips, or french-fried potatoes are batonnet or allumette-cut deep-fried potatoes.</p></section></div>
 	<div class="col-lg-4 col-md-6 col-sm-12 ">
 	<section>
-		<h2 id="burger">Burger</h2>
+		<h2 id="Ham">Ham Burger</h2>
 	<p>
 
 	A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun. The patty may be pan fried, grilled, or flame broiled</p>
@@ -26,14 +25,11 @@
 
 	<div class="col-lg-4 col-md-12 col-sm-12">
 <section>
-	<h2 id="pasta">Pasta</h2>
+	<h2 id="wings">Buffalo wings</h2>
 	<p>
     
-	Pasta is a staple food of Italian cuisine. Pasta is typically made from an unleavened dough of durum wheat flour mixed with water or eggs, and formed into sheets or various shapes, then cooked by boiling or baking.</p></section>
+	A Buffalo wing, in the cuisine of the United States, is an unbreaded chicken wing section that is generally deep-fried then coated or dipped in a sauce consisting of a vinegar-based cayenne pepper hot sauce and melted butter prior to serving.</p></section>
 </div>
 </div>
-</body>
-</html>
-
 </body>
 </html>
