--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 <head>
 <title>My Coursera Assingment</title>
-<meta name="viewport" content="width=device-width.initial-scale=1">
-<link rel="stylesheet" href="style.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<h1> Our Menu</h1>
