--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-<title>My Coursera Assingment</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/style.css">
+	<meta charset="utf-8">
+	<title>My Coursera Assignment</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1> Our Menu</h1>
-	<div class="row">
-		<div class="col-lg-4 col-md-6 col-sm-12">
-  <section>			
-	<h2 id="french">French fries</h2>
-	<p>
-	French fries, or simply fries; chips, finger chips, or french-fried potatoes are batonnet or allumette-cut deep-fried potatoes.</p></section></div>
-	<div class="col-lg-4 col-md-6 col-sm-12 ">
-	<section>
-		<h2 id="Ham">Ham Burger</h2>
-	<p>
 
-	A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun. The patty may be pan fried, grilled, or flame broiled</p>
-	</section>
-</div>
-
+<h1>Our Menu</h1>
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<div id="Chicken">Chicken</div>
+		<p>Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes.</p>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+		<div id="Beef">Beef</div>
+		<p>Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.</p>
+	</div>
 	<div class="col-lg-4 col-md-12 col-sm-12">
-<section>
-	<h2 id="wings">Buffalo wings</h2>
-	<p>
-    
-	A Buffalo wing, in the cuisine of the United States, is an unbreaded chicken wing section that is generally deep-fried then coated or dipped in a sauce consisting of a vinegar-based cayenne pepper hot sauce and melted butter prior to serving.</p></section>
-</div>
+		<div id="Sushi">Sushi</div>
+		<p> Sushi is a Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, vegetables, and occasionally tropical fruits.</p>
+	</div>
 </div>
 </body>
 </html>
